--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gerador de meme</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+
+  <label for="text-input">Text do Meme:</label>
+  <input type="text" id="text-input">
+
+  <div id="mem-image-container">
+    <p id="meme-text"></p>
+  </div>
+<script src="script.js"></script>
 </body>
 </html>
