--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
   <label for="text-input">Text do Meme:</label>
   <input type="text" id="text-input">
 
-  <div id="mem-image-container">
-    <p id="meme-text"></p>
+  <label for="meme-insert">Foto:</label>
+  <input type="file" id="meme-insert">
+
+  <div class="container" id="meme-image-container">
+    
+    <p class="meme-text" id="meme-text"></p>
   </div>
 <script src="script.js"></script>
 </body>
