--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
   <input type="text" id="text-input">
 
   <label for="meme-insert">Foto:</label>
-  <input type="file" id="meme-insert">
+  <input type="file" id="meme-insert" maxlength="60">
 
   <div class="container" id="meme-image-container">
-    
+    <img class="backgroundOfContainer" id="img" src="#" alt="">
     <p class="meme-text" id="meme-text"></p>
   </div>
+  <button id="fire">Fire</button>
+  <button id="water">Water</button>
+  <button id="earth">Earth</button>
+  
 <script src="script.js"></script>
 </body>
 </html>
